<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/s"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="@string/title_video"
                app:titleTextColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:paddingHorizontal="@dimen/_12dp"
                    android:paddingVertical="@dimen/_16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8dp"
                        android:text="@string/title_convert_video"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:paddingHorizontal="@dimen/_12dp"
                    android:paddingVertical="@dimen/_16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8dp"
                        android:text="@string/title_cut_video"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:paddingHorizontal="@dimen/_12dp"
                    android:paddingVertical="@dimen/_16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8dp"
                        android:text="@string/title_video_to_mp3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:paddingHorizontal="@dimen/_12dp"
                    android:paddingVertical="@dimen/_16dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8dp"
                        android:text="@string/title_mp3_to_video"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_12dp"
                android:text="Gif Tools"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginEnd="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginEnd="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginEnd="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_home"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_convert_video"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_video_crop"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginTop="@dimen/_12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_my_project"
                    android:textColor="@color/white"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_view_all"
                        android:textSize="@dimen/_16sp"
                        android:textColor="@color/orange"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right"
                        app:tint="@color/orange" />

                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_my_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>